--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: beige;
+}
+
+.answer,.calculator {
+    background-color: rgb(212, 212, 212);
 }
 
 .calculator {
@@ -19,8 +24,8 @@ body {
     height: 60px;
     border: 1px solid black;
     display:flex;
-    align-items: flex-end;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
 }
 
 .answer p {
@@ -40,3 +45,26 @@ body {
     flex-direction: column;
     justify-content: center;
 }
+
+.inner {
+    height: 50px;
+    width: 270px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    background-color: rgb(238, 237, 237);
+    
+}
+
+.operator {
+    background-color: rgb(228, 255, 246);
+}
+
+.number {
+    background-color: rgb(185, 210, 255);
+}
+
+.clr,.invert,.percent,.decimal,.calc {
+    background-color: rgb(255, 255, 154);
+} 
